<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="#000000">

    <TextView android:id="@+id/titleText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#318CE7"
        android:textStyle="bold|italic" 
        android:gravity="center"
        android:text="@string/end"/>
    
    <AutoCompleteTextView
        android:id="@+id/autocomplete7"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="right"
        android:popupBackground="#0FFF"
        android:textColor="#318CE7" >

        <requestFocus />
    </AutoCompleteTextView>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="240dp"
        android:layout_weight="0.00"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btn4Back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"            
            android:onClick="backEndClicked"
            android:text="@string/back"
            android:textColor="#318CE7"
            android:textSize="25sp"
            android:textStyle="bold|italic" />
        <!-- android:background="@drawable/button_shape"-->

        <Button
            android:id="@+id/btn4Next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:onClick="nextDialogClicked"
            android:text="@string/next"
            android:textColor="#318CE7"
            android:textSize="25sp"
            android:textStyle="bold|italic" />
            <!-- android:background="@drawable/button_shape"-->
            
    </RelativeLayout>

</LinearLayout>