<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#000000" >    

    <TextView android:id="@+id/titleText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#318CE7"
        android:textStyle="bold|italic" 
        android:gravity="center"
        android:text="@string/addresses"/>
    
    <AutoCompleteTextView
        android:id="@+id/autocomplete6"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="right"
        android:textColor="#318CE7"
        android:popupBackground="#0FFF" />

    <ListView
        android:id="@+id/addressesListView6"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:layout_weight="0.01"
        android:gravity="right" >
    </ListView>
    
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="72dp"
        android:orientation="vertical" >
<!-- android:background="@drawable/button_shape"-->
        <!-- android:background="@drawable/button_shape"-->

        <Button
            android:id="@+id/btn3Back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:onClick="backClicked"
            android:text="@string/back"
            android:textColor="#318CE7"
            android:textSize="25sp"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/btn3Next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:text="@string/next"
            android:textColor="#318CE7"
            android:textSize="25sp"
            android:textStyle="bold|italic" />

</RelativeLayout>
</LinearLayout>