<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/road"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".StartAddressActivity" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/addresses"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_gravity="center"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:textStyle="bold|italic" />

    <AutoCompleteTextView
        android:id="@+id/autocomplete2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:textColor="#FFFFFF"
        android:popupBackground="#0FFF" />

    <ListView
        android:id="@+id/addressesListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="38dp"
        android:layout_weight="0.01" >
    </ListView>

   <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_gravity="bottom" >

        <Button
            android:id="@+id/btn3Back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/button_shape"
            android:onClick="backClicked"
            android:text="@string/back"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/btn3Next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/button_shape"
            android:onClick="nextClicked"
            android:text="@string/next"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:textStyle="bold|italic" />
        
    </RelativeLayout>

</LinearLayout>