<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.finalproject.RoutsActivity"
    android:background="@color/white" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="107dp"
            android:layout_centerHorizontal="true"
            android:layout_weight="0.86"
            android:divider="@color/black"
            android:dividerHeight="4px"
            android:background="@drawable/customborder" >
        </ListView>

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/nav" />

       <!--  <Button
            android:id="@+id/imageButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_shape"
            android:onClick="backClicked"
            android:text="@string/back"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:textStyle="bold|italic" />  -->
    </LinearLayout>
    
     <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="0dp"
        android:orientation="vertical"
        android:background="@drawable/customborder" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
        
		
           <Button android:id="@+id/action_map2"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
        		   android:orderInCategory="0"
          		   android:src="@drawable/ic_action_map"
          		   android:background="?android:attr/selectableItemBackground"
          		   android:drawableTop="@drawable/ic_action_split"
          		   android:text="@string/action_map"
          		   android:textColor="@color/black"
          		   android:textSize="8sp"
          		   android:layout_weight="1"/>
           
           <Button android:id="@+id/action_favorits2"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
        		   android:orderInCategory="0"
          		   android:src="@drawable/ic_action_favorite"
          		   android:background="?android:attr/selectableItemBackground"
          		    android:drawableTop="@drawable/ic_action_favorite"
          		   android:text="@string/action_favorits"
          		   android:textColor="@color/black"
          		   android:textSize="8sp"
          		   android:layout_weight="1" />
           
           <Button android:id="@+id/action_person2"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
        		   android:orderInCategory="0"
          		   android:src="@drawable/ic_action_person"
          		   android:background="?android:attr/selectableItemBackground"
          		    android:drawableTop="@drawable/ic_action_person"
          		   android:text="@string/action_person"
          		   android:textColor="@color/black"
          		   android:textSize="8sp"
          		   android:layout_weight="1"/>
           
           <Button android:id="@+id/action_help2"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
        		   android:orderInCategory="0"
          		   android:src="@drawable/ic_action_help"
          		   android:background="?android:attr/selectableItemBackground"
          		   android:drawableTop="@drawable/ic_action_help"
          		   android:text="@string/action_help"
          		   android:textColor="@color/black"
          		   android:textSize="8sp"
          		   android:layout_weight="1" />
           
           <Button
               android:id="@+id/action_settings2"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:background="?android:attr/selectableItemBackground"
               android:drawableTop="@drawable/ic_action_settings"
          		android:text="@string/action_settings"
          		android:textColor="@color/black"
          		android:textSize="8sp"
               android:src="@drawable/ic_action_settings"
               android:layout_weight="1" />
        
           </LinearLayout>
    </LinearLayout>

</RelativeLayout>
